--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,6 +1,24 @@
 group 'com.lib.flutter_blue_plus'
 version '1.0'
 
+buildscript {
+    repositories {
+        google()
+        jcenter()
+    }
+
+    dependencies {
+        classpath 'com.android.tools.build:gradle:3.5.0'
+    }
+}
+
+rootProject.allprojects {
+    repositories {
+        google()
+        jcenter()
+    }
+}
+
 apply plugin: 'com.android.library'
 
 android {
@@ -22,5 +40,7 @@ android {
         }
     }
 
-    namespace 'com.lib.flutter_blue_plus'
+    lintOptions {
+        disable 'InvalidPackage'
+    }
 }
